--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,12 +3,12 @@
       "target": "es6",
       "module": "commonjs",
       "outDir": "dist/js",
-      "rootDir": "src",
+      "rootDir": "api",
       "strict": true,
       "esModuleInterop": true,
       "noImplicitAny": true,
       "forceConsistentCasingInFileNames": true
     },
-    "include": ["src/**/*"],
-    "exclude": ["src/types/*.ts", "node_modules", ".vscode", ".idea"]
+    "include": ["api/**/*"],
+    "exclude": ["api/types/*.ts", "node_modules", ".vscode", ".idea"]
   }
