--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1",
+    "react-transition-group": "^4.4.5",
     "typescript": "^5.4.5"
   },
   "devDependencies": {
